--- a/style.css
+++ b/style.css
@@ -2,17 +2,22 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    text-align: center;
+    text-align: center; 
+
 }
 nav ul {
     display: flex;
     justify-content: center;
     background-color: #333;
-    padding: 10px;
+    padding: 20px;
     list-style: none;
 }
 nav ul li {
     margin: 0 15px;
+}
+nav ul{
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 nav ul li a {
     color: white;
@@ -23,12 +28,19 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #ddd;
     color: black;
+    
 }
 .home-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 20px;
+    background-image: url("/images/bg3.jpg");
+    background-repeat:no-repeat;
+    background-size: 100% 100%;
+    height: 500px;
+    opacity: 90%;
+    margin: mx-auto;
 }
 .products-grid {
     display: grid;
