--- a/style.css
+++ b/style.css
@@ -2,22 +2,20 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    text-align: center; 
-
+    text-align: center;
 }
 nav ul {
     display: flex;
     justify-content: center;
     background-color: #333;
-    padding: 20px;
+    padding: 25px;
     list-style: none;
 }
 nav ul li {
     margin: 0 15px;
 }
 nav ul{
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin: 0px;
 }
 nav ul li a {
     color: white;
@@ -28,23 +26,21 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #ddd;
     color: black;
-    
 }
-.home-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    background-image: url("/images/bg3.jpg");
-    background-repeat:no-repeat;
-    background-size: 100% 100%;
-    height: 500px;
-    opacity: 90%;
-    margin: mx-auto;
-}
+.home-container {     display: flex;   
+      justify-content: space-around;  
+         align-items: center;  
+            padding: 20px;
+                 background-image: url("/images/bg3.jpg");     
+                 background-repeat:no-repeat;    
+                  background-size: 100% 100%;    
+                   height: 500px; 
+                       opacity: 90%;  
+             margin: mx-auto; }
+
 .products-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
 }
@@ -57,4 +53,22 @@ button {
 }
 button:hover {
     background-color: darkblue;
+}
+footer{
+    background-color: #333;
+    color:white;
+    padding: 20px;
+    margin-bottom: 0px;
+}
+.products-display{
+    display: flex;
+     gap: 20px; 
+     justify-content: center;
+}
+.iphone{
+    height: 225px;
+}
+.type-heading{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
